# chatbotfullpipeline

./: .gitignore  CLAUDE.md  QWEN.md  README.md  docker-compose.yml  main.py  pyproject.toml  terraform.tfstate
.claude/: settings.json  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: docs_agent.py  meeting_agent.py  root_agent.py
backend/app/core/: cache.py  config.py  csrf.py  database.py  database_auth.py  dependencies.py  indexing_status.py  llm_config.py  llm_config.yaml  logger.py  security.py
backend/app/exceptions/: handlers.py
backend/app/models/: user.py
backend/app/repositories/: meeting_repo.py  mem0_repo.py  qdrant_repo.py  wiki_repo.py
backend/app/schemas/: chat.py  document.py  memory.py  session.py  transcription.py  user.py  wiki.py
backend/app/services/: auth_service.py  chat_service.py  document_service.py  dynamo_session_service.py  memory_service.py  rag_service.py  soniox_service.py  transcript_rag_service.py  wiki_service.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_core_config.py  test_core_indexing_status.py  test_core_security.py  test_documents.py  test_dynamo_session_service.py  test_exceptions_handlers.py  test_memory.py  test_rag_service.py  test_repositories_meeting_repo.py  test_repositories_mem0_repo.py  test_repositories_qdrant_repo.py  test_services_document_service.py  test_sessions.py  test_storage.py  test_transcription.py  test_utils_file_utils.py  test_utils_wiki_utils.py  test_wiki_repo.py  test_wiki_service.py  test_wiki_tools.py
(+150 files in other folders)
